# fractal

./: .clang-format  CMakeLists.txt
src/: EntryPoint.cpp
src/engine/: Engine.hpp
src/engine/renderer/: Renderer.hpp  StreamBuffer.hpp
src/engine/renderer/shader/: Compiler.hpp  Simple.hpp  StreamBuffer.hpp
